# kusto-language

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench_main.rs
benches/benchmarks/: token_parser.rs
src/: lib.rs  main.rs  token_parser.rs
src/syntax_parser/: constants.rs  expr_parsers.rs  lit_parsers.rs  macros.rs  mod.rs  parser.rs  parsers.rs  query_parser.rs  tests.rs  types.rs  utilities.rs
src/token_parser/: constants.rs  mod.rs  parser.rs  scanner.rs  tests.rs  types.rs  utilities.rs
